--- a/Notebooks/Car-Price-Estimation-Using-ML.ipynb
+++ b/Notebooks/Car-Price-Estimation-Using-ML.ipynb
@@ -46,13 +46,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Panda Library + DataFrames concept\n",
+    "\n",
+    "Pandas is an open source Python library for data analysis.\n",
+    "For a hands-on introduction, try the [Pandas Tutorial](https://pandas.pydata.org/docs/user_guide/10min.html).\n",
+    "\n",
+    "It is the most popular library for dealing with structured 2D datasets. \n",
+    "\n",
+    "A DataFrame is an enhanced two-dimensional array.\n",
+    "\n",
+    "Pandas displays DataFrames in tabular format with the indices rows aligned in the left index column (starting at zero)\n",
+    "and the remaining columns’ values right aligned. \n",
+    "\n",
+    "The dictionary’s keys become the column names \n",
+    "and the values associated with each key become the element values \n",
+    "in the corresponding column.\n",
+    "\n",
+    "Note, the index column is not named and the row labels are integers starting at zero."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Reading the dataset\n",
+    "# Reading the dataset from a .CSV file\n",
+    "# creating a dataframe with pandas\n",
+    "\n",
     "cars = pd.read_csv(\"CarPrice_Assignment.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Viewing data\n",
+    "\n",
+    "Use DataFrame.head() and DataFrame.tail() to view the top and bottom rows of the frame respectively:"
    ]
   },
   {
@@ -274,7 +308,250 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>car_ID</th>\n",
+       "      <th>symboling</th>\n",
+       "      <th>CarName</th>\n",
+       "      <th>fueltype</th>\n",
+       "      <th>aspiration</th>\n",
+       "      <th>doornumber</th>\n",
+       "      <th>carbody</th>\n",
+       "      <th>drivewheel</th>\n",
+       "      <th>enginelocation</th>\n",
+       "      <th>wheelbase</th>\n",
+       "      <th>...</th>\n",
+       "      <th>enginesize</th>\n",
+       "      <th>fuelsystem</th>\n",
+       "      <th>boreratio</th>\n",
+       "      <th>stroke</th>\n",
+       "      <th>compressionratio</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>peakrpm</th>\n",
+       "      <th>citympg</th>\n",
+       "      <th>highwaympg</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>201</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>volvo 145e (sw)</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>four</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>109.1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>141</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>3.78</td>\n",
+       "      <td>3.15</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>114</td>\n",
+       "      <td>5400</td>\n",
+       "      <td>23</td>\n",
+       "      <td>28</td>\n",
+       "      <td>16845.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>201</th>\n",
+       "      <td>202</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>volvo 144ea</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>turbo</td>\n",
+       "      <td>four</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>109.1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>141</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>3.78</td>\n",
+       "      <td>3.15</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>160</td>\n",
+       "      <td>5300</td>\n",
+       "      <td>19</td>\n",
+       "      <td>25</td>\n",
+       "      <td>19045.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>202</th>\n",
+       "      <td>203</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>volvo 244dl</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>four</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>109.1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>173</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>3.58</td>\n",
+       "      <td>2.87</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>134</td>\n",
+       "      <td>5500</td>\n",
+       "      <td>18</td>\n",
+       "      <td>23</td>\n",
+       "      <td>21485.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>203</th>\n",
+       "      <td>204</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>volvo 246</td>\n",
+       "      <td>diesel</td>\n",
+       "      <td>turbo</td>\n",
+       "      <td>four</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>109.1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>145</td>\n",
+       "      <td>idi</td>\n",
+       "      <td>3.01</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>106</td>\n",
+       "      <td>4800</td>\n",
+       "      <td>26</td>\n",
+       "      <td>27</td>\n",
+       "      <td>22470.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>204</th>\n",
+       "      <td>205</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>volvo 264gl</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>turbo</td>\n",
+       "      <td>four</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>109.1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>141</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>3.78</td>\n",
+       "      <td>3.15</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>114</td>\n",
+       "      <td>5400</td>\n",
+       "      <td>19</td>\n",
+       "      <td>25</td>\n",
+       "      <td>22625.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     car_ID  symboling          CarName fueltype aspiration doornumber  \\\n",
+       "200     201         -1  volvo 145e (sw)      gas        std       four   \n",
+       "201     202         -1      volvo 144ea      gas      turbo       four   \n",
+       "202     203         -1      volvo 244dl      gas        std       four   \n",
+       "203     204         -1        volvo 246   diesel      turbo       four   \n",
+       "204     205         -1      volvo 264gl      gas      turbo       four   \n",
+       "\n",
+       "    carbody drivewheel enginelocation  wheelbase  ...  enginesize  fuelsystem  \\\n",
+       "200   sedan        rwd          front      109.1  ...         141        mpfi   \n",
+       "201   sedan        rwd          front      109.1  ...         141        mpfi   \n",
+       "202   sedan        rwd          front      109.1  ...         173        mpfi   \n",
+       "203   sedan        rwd          front      109.1  ...         145         idi   \n",
+       "204   sedan        rwd          front      109.1  ...         141        mpfi   \n",
+       "\n",
+       "     boreratio  stroke compressionratio horsepower  peakrpm citympg  \\\n",
+       "200       3.78    3.15              9.5        114     5400      23   \n",
+       "201       3.78    3.15              8.7        160     5300      19   \n",
+       "202       3.58    2.87              8.8        134     5500      18   \n",
+       "203       3.01    3.40             23.0        106     4800      26   \n",
+       "204       3.78    3.15              9.5        114     5400      19   \n",
+       "\n",
+       "     highwaympg    price  \n",
+       "200          28  16845.0  \n",
+       "201          25  19045.0  \n",
+       "202          23  21485.0  \n",
+       "203          27  22470.0  \n",
+       "204          25  22625.0  \n",
+       "\n",
+       "[5 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's take a look at the last few rows\n",
+    "cars.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 205 entries, 0 to 204\n",
+      "Columns: 26 entries, car_ID to price\n",
+      "dtypes: float64(8), int64(8), object(10)\n",
+      "memory usage: 41.8+ KB\n",
+      "None\n",
+      "(205, 26)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Show datatypes of each column\n",
+    "print(cars.info(verbose = False))\n",
+    "# Show the shape of the dataset rows x columns\n",
+    "print(cars.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +633,7 @@
        "Name: symboling, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,6 +643,44 @@
     "# Most cars are 0,1,2\n",
     "cars['symboling'].astype('category').value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        1\n",
+       "1        2\n",
+       "2        3\n",
+       "3        4\n",
+       "4        5\n",
+       "      ... \n",
+       "200    201\n",
+       "201    202\n",
+       "202    203\n",
+       "203    204\n",
+       "204    205\n",
+       "Name: car_ID, Length: 205, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cars['car_ID']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
